--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFFFFF" />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqMMDzJUO1arbzZ6cx3T5r1cjusecXgJw"></script>
     <meta
       name="description"
