--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqMMDzJUO1arbzZ6cx3T5r1cjusecXgJw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqMMDzJUO1arbzZ6cx3T5r1cjusecXgJw&libraries=places"></script>
     <script src="https://kit.fontawesome.com/fc52d3d315.js" crossorigin="anonymous"></script>
     <meta
       name="description"
